name:                hm
version:             0.1
synopsis:            Hindley-Milner type inference
description:         Generic implementation of Hindley-Milner type inference using the unification-fd package
homepage:            https://github.com/glguy/hm
license:             MIT
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2015 Eric Mertens
category:            Language
build-type:          Simple
extra-source-files:  README.markdown
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2
bug-reports:         https://github.com/glguy/hm/issues

source-repository head
  type: git
  location: git://github.com/glguy/hm

library
  ghc-options: -Wall
  exposed-modules:     HM.Annotation,
                       HM.Env,
                       HM.Example,
                       HM.Mono,
                       HM.Orphans,
                       HM.Poly,
                       HM.Pretty,
                       HM.Sym,
                       HM.Term,
                       HM.Typecheck

  other-extensions:    PatternSynonyms,
                       TypeFamilies,
                       MultiParamTypeClasses,
                       DeriveFunctor,
                       DeriveTraversable,
                       DeriveFoldable,
                       DeriveGeneric,
                       OverloadedStrings,
                       StandaloneDeriving

  build-depends:       base >=4.9 && <4.11,
                       lens >=4.15 && <4.16,
                       containers >=0.5 && <0.6,
                       prelude-extras >=0.4 && <0.5,
                       unification-fd >=0.10 && <0.11,
                       transformers >=0.5 && <0.6

  hs-source-dirs:      src
  default-language:    Haskell2010
